--- a/package.json
+++ b/package.json
@@ -14,15 +14,13 @@
     "@reduxjs/toolkit": "^2.2.1",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^7.4.0",
     "react-select": "^5.10.1",
-    "react-table": "^7.8.0",
     "react-toastify": "^11.0.5",
     "yup": "^1.6.1"
   },
