--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "react": "19.0.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "19.0.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
