--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-VITE_API_URL=http://localhost:8080/
+VITE_API_URL=http://localhost:8080/api/
+VITE_MEDIA_URL=http://localhost:8080/
 
 VITE_JWT_SECRET=your_jwt_secret_key
